# speeddating

./: .gitignore  .python-version  README.rst  pyproject.toml
speeddatingsim/: __main__.py  algorithms.py  elo.py  feistel.py  mwmatching.py  names.py  prompts.py  scrape.py  server.py  tarot.py  wordlists.py
speeddatingsim/static/: style.css
speeddatingsim/templates/: banned.html  index.html  layout.html  matchmaker.html  session.html  sessions.html  tarot.html  tarots.html  user.html
speeddatingsim/waite_cards/: 00_0_Fool.txt  01_1_Magician.txt  02_2_High_Priestess.txt  03_3_Empress.txt  04_4_Emperor.txt  05_5_Hierophant.txt  06_6_Lovers.txt  07_7_Chariot.txt  08_8_Strength.txt  09_9_Hermit.txt  10_10_Wheel_Of_Fortune.txt  11_11_Justice.txt  12_12_Hanged_Man.txt  13_13_Death.txt  14_14_Temperance.txt  15_15_Devil.txt  16_16_Tower.txt  17_17_Star.txt  18_18_Moon.txt  19_19_Sun.txt  20_20_Judgement.txt  21_21_World.txt  22_Wand_1.txt  23_Wand_2.txt  24_Wands_3.txt  25_Wands_4.txt  26_Wands_5.txt  27_Wand_6.txt  28_Wand_7.txt  29_Wands_8.txt  30_Wands_9.txt  31_Wands_10.txt  32_Wands_Page.txt  33_Wand_Knight.txt  34_Wand_Queen.txt  35_Wand_King.txt  36_Cup_1.txt  37_Cup_2.txt  38_Cups_3.txt  39_Cups_4.txt  (+38 more)
