[project]
name = "speeddatingsim"
version = "0.1.0"
description = ""
authors = [
    {name = "Blaine Rogers",email = "blaine.w.rogers@gmail.com"}
]
requires-python = ">=3.14"
dependencies = [
    "numpy (>=2.4.6,<3.0.0)",
    "scikit-learn (>=1.9.0,<2.0.0)",
    "matplotlib (>=3.10.9,<4.0.0)",
    "tqdm (>=4.67.3,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
